--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
-<DOCTYPE.html>
+<!DOCTYPE html>
 <html>
 <head>
+</head><title>Home</title>
+<link href="style.css" rel="stylesheet" type="text/css">
+</head>
+<body>
 
-	
-	
-	<title>tables</title>
-	<tr border=1>
+<ul>
+  <li><a class="active" href="home.html">Home</a></li>
+  <li><a class="active"href="gameplays.html">GAMEPLAYS</a></li>
+  <li><a class="active"href="guides.html">GUIDES</a></li>
+  <li><a class="active"href="UPDATES.html">UPDATES</a></li>
+</ul>
+<style>
+body, html {
+  height: 100%;
+}
 
-	<tr> 
-	
-	<th>street address</th>
-	<th>address</th>
-	<th>city</th>
+.parallax {
+  
+  background-image: url('LOL.jpg');
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+<div class="parallax"></div>	
 
-	<tr>
- 
-	<td>
+<div style="height:165px;background-color:#FF7F50;font-size:35px; font-family:calibri; text-align:justify;">
+The word meme was coined by Richard Dawkins in his 1976 book The Selfish Gene as an attempt to explain the way cultural information spreads; The concept of the Internet meme was first proposed by Mike Godwin in the June 1993 issue of Wired.
+</div>
 
+<div class="parallax"></div>
 
-	<td>27-L 5-B Lurdes St.</td>
-	<td>milagrosa</td>
-	<td>marikina</td>
-	
-	</tr>
+</body>
+</html><!DO
